src/objects/Engagement_Plan_Line__c.object
<CustomObject>
    <fields>
        <fullName>Actuals__c</fullName>
        <label>Actuals (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attendee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Plan__c</fullName>
        <label>Engagement Plan</label>
        <referenceTo>Engagement_Plan__c</referenceTo>
        <relationshipLabel>Engagement Plan Lines</relationshipLabel>
        <relationshipName>Engagement_Plan_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Engagement_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Engagement (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <label>Planned (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Engagement__c</fullName>
        <label>Type of Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Engagement</valueSetName>
        </valueSet>
    </fields>
    <label>Engagement Plan Line</label>
    <nameField>
        <displayFormat>EPN-{0000000}</displayFormat>
        <label>Engagement Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Plan Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>